# ReSim

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakePresets.json  README.MD  REAMDE.MD  TODO.MD  build.sh  main.cpp
base/: CMakeLists.txt
base/inc/base/: compute.h  memory.h
base/src/: memory.cpp
chips/: CMakeLists.txt
chips/I8080/: CMakeLists.txt  INSTRUCTIONS.MD
chips/I8080/inc/I8080/: I8080.h  I8080_OpCodes.h  I8080_OpHelpers.h  I8080_Status.h
chips/I8080/inc/I8080/Operations/: ADC_Ops.h  ADD_Ops.h  ANA_Ops.h  ANI_Ops.h  CALL_Ops.h  CMA_Ops.h  CMC_Ops.h  CMP_Ops.h  DAA_Ops.h  DAD_Ops.h  DCR_Ops.h  DCX_Ops.h  I8080_ADC_Ops.h  I8080_ADD_Ops.h  I8080_ANA_Ops.h  I8080_ANI_Ops.h  I8080_CMP_Ops.h  I8080_DAD_Ops.h  I8080_DCR_Ops.h  I8080_LDA_Ops.h  I8080_LXI_Ops.h  I8080_MOV_E_Ops.h  I8080_MOV_L_Ops.h  I8080_MOV_M_Ops.h  I8080_MVI_Ops.h  I8080_ORA_Ops.h  I8080_PCHL_Ops.h  I8080_ROT_Ops.h  I8080_SBB_Ops.h  I8080_SPHL_Ops.h  I8080_STA_Ops.h  I8080_SUB_Ops.h  I8080_XCHG_Ops.h  I8080_XR_Ops.h  I8080_XTHL_Ops.h  INR_Ops.h  INX_Ops.h  JUMP_Ops.h  LDA_Ops.h  LHLD_Ops.h  (+29 more)
chips/I8080/src/: I8080.cpp  I8080_OpHelpers.cpp
chips/I8086/: CMakeLists.txt  INSTRUCTIONS.MD
chips/I8086/inc/I8086/: I8086.h  I8086_Addressing.h  I8086_OpCodes.h  I8086_OpCodesList.h  I8086_OpHelpers.h  I8086_Status.h
chips/I8086/inc/I8086/Operations/: GRP_Ops.h  OR_Ops.h
chips/I8086/src/: I8086.cpp  I8086_OpHelpers.cpp
chips/MOS6502/: CMakeLists.txt
chips/MOS6502/inc/MOS6502/: MOS6502.h  MOS6502_OpCodes.h  MOS6502_OpCodesList.h  MOS6502_OpHelpers.h  MOS6502_Status.h
chips/MOS6502/inc/MOS6502/Operations/: ADC_Ops.h  AND_Ops.h  ASL_Ops.h  B_Ops.h  CL_Ops.h  CMP_Ops.h  CPX_Ops.h  CPY_Ops.h  DEC_Ops.h  EOR_Ops.h  INC_Ops.h  JMP_JSR_RTS_RTI_Ops.h  LDA_Ops.h  LDX_Ops.h  LDY_Ops.h  LD_Ops.h  LSR_Ops.h  MOS6502_CM_Ops.h  MOS6502_EOR_Ops.h  MOS6502_LDY_Ops.h  MOS6502_LD_Ops.h  MOS6502_NOP_Op.h  MOS6502_STX_Ops.h  NOP_Op.h  ORA_Ops.h  P_Ops.h  ROL_Ops.h  ROR_Ops.h  SBC_Ops.h  SE_Ops.h  STA_Ops.h  STX_Ops.h  STY_Ops.h  ST_Ops.h  T_Ops.h
chips/MOS6502/src/: MOS6502.cpp  MOS6502_OpHelpers.cpp
core/: CMakeLists.txt
core/inc/core/: compilers_macro.h  macro.h  types.h
core/inc/function_library/: content_manipulation.h  resim_functional_library.h
inc/: CPU6502.h  CPU6502_OpCodes.h  CPU6502_OpCodesList.h  CPU6502_OpHelpers.h  CPU6502_Status.h  CPU_Base.h  Macro.h  Memory.h  OpCodes_6502.h  Types.h  utils.h
inc/I8080/: I8080.h  I8080_OpCodes.h  I8080_OpCodesList.h  I8080_OpHelpers.h  I8080_Status.h  INSTRUCTIONS.MD
inc/MOS6502/: INSTRUCTIONS.MD  MOS6502.h  MOS6502_OpCodes.h  MOS6502_OpCodesList.h  MOS6502_OpHelpers.h  MOS6502_Status.h
inc/Operations/: CPU6502_ADC_Ops.h  CPU6502_AND_Ops.h  CPU6502_ASL_Ops.h  CPU6502_BIT_Ops.h  CPU6502_B_Ops.h  CPU6502_CL_Ops.h  CPU6502_CMP_Ops.h  CPU6502_CM_Ops.h  CPU6502_CPX_Ops.h  CPU6502_CPY_Ops.h  CPU6502_DEC_Ops.h  (+24 more)
src/: CPU6502.cpp  CPU6502_OpHelpers.cpp
tests/: ADC_Tests.cpp  AND_Tests.cpp  ASL_Tests.cpp  ASM_Tests.cpp  BCC_Tests.cpp  BCS_Tests.cpp  BEQ_Tests.cpp  BIT_Tests.cpp  BMI_Tests.cpp  BNE_Tests.cpp  BPL_Tests.cpp  BVC_Tests.cpp  BVS_Tests.cpp  B_Tests.cpp  CL_Tests.cpp  CMP_Tests.cpp  CM_Tests.cpp  CMakeLists.txt  CPU_Tests.cpp  CPX_Tests.cpp  CPY_Tests.cpp  DECM_Tests.cpp  DEC_Tests.cpp  DEX_Tests.cpp  DEY_Tests.cpp  DE_Tests.cpp  EOR_Tests.cpp  INCM_Tests.cpp  INC_Tests.cpp  INX_Tests.cpp  INY_Tests.cpp  JMP_JSR_RTS_Tests.cpp  JSR_Tests.cpp  JumpAndCall_Tests.cpp  LDA_Tests.cpp  LDX_Tests.cpp  LDY_Tests.cpp  LD_Tests.cpp  LSR_Tests.cpp  NOP_Tests.cpp  (+18 more)
tests/I8080/: CMakeLists.txt
tests/I8080/inc/: I8080_MOV_Tests.h  I8080_TestingSuite.h
tests/I8080/src/: ADC_Tests.cpp  ADD_Tests.cpp  ANA_Tests.cpp  ANI_Tests.cpp  CALL_RET_Tests.cpp  CC_RC_Tests.cpp  CMA_Tests.cpp  CMC_Tests.cpp  CMP_Tests.cpp  CM_RM_Tests.cpp  CNC_RNC_Tests.cpp  CNZ_RNZ_Tests.cpp  CPE_RPE_Tests.cpp  CPO_RPO_Tests.cpp  CP_RP_Tests.cpp  CZ_RZ_Tests.cpp  DAA_Tests.cpp  DAD_Tests.cpp  DCR_Tests.cpp  DCX_Tests.cpp  INR_Tests.cpp  INX_Tests.cpp  JC_JNC_Tests.cpp  JM_JP_Tests.cpp  JPO_JPE_Tests.cpp  JUMP_Tests.cpp  JZ_JNZ_Tests.cpp  LDA_Tests.cpp  LHLD_Tests.cpp  LXI_Tests.cpp  MOV_A_Tests.cpp  MOV_B_Tests.cpp  MOV_C_Tests.cpp  MOV_D_Tests.cpp  MOV_E_Tests.cpp  MOV_H_Tests.cpp  MOV_L_Tests.cpp  MOV_M_Tests.cpp  MOV_Tests.cpp  MVI_Tests.cpp  (+18 more)
tests/I8086/: CMakeLists.txt
tests/I8086/inc/: I8086_TestingSuite.h
tests/I8086/src/: OR_Tests.cpp
tests/MOS6502/: ASL_Tests.cpp  BEQ_Tests.cpp  BNE_Tests.cpp  BPL_Tests.cpp  BVC_Tests.cpp  B_Tests.cpp  CMP_Tests.cpp  CMakeLists.txt  CPU_Tests.cpp  CPX_Tests.cpp  CPY_Tests.cpp  DEC_Tests.cpp  DEX_Tests.cpp  INCM_Tests.cpp  INY_Tests.cpp  JMP_JSR_RTS_Tests.cpp  LDA_Tests.cpp  LDY_Tests.cpp  LD_Tests.cpp  SE_Tests.cpp  STA_Tests.cpp  STX_Tests.cpp  TAX_Tests.cpp  TAY_Tests.cpp  TSX_Tests.cpp  TXS_Tests.cpp  TYA_Tests.cpp  TestSuite_MOS6502.cpp
tests/MOS6502/asm/: crc-16.s  crc-32.s  crc-8.s  memcpy-255.s  mult-by-10.s
tests/MOS6502/inc/: MOS6502_ASMTestingSuite.h  MOS6502_B_Tests.h  MOS6502_CM_Tests.h  MOS6502_DEC_Tests.h  MOS6502_INC_Tests.h  MOS6502_LD_Tests.h  MOS6502_ST_Tests.h  MOS6502_T_Tests.h  MOS6502_TestingSuite.h
tests/MOS6502/src/: ADC_Tests.cpp  AND_Tests.cpp  ASL_Tests.cpp  ASM_Tests.cpp  BCC_Tests.cpp  BCS_Tests.cpp  BEQ_Tests.cpp  BIT_Tests.cpp  BMI_Tests.cpp  BNE_Tests.cpp  BPL_Tests.cpp  BVC_Tests.cpp  BVS_Tests.cpp  B_Tests.cpp  CL_Tests.cpp  CMP_Tests.cpp  CM_Tests.cpp  CPU_Tests.cpp  CPX_Tests.cpp  CPY_Tests.cpp  DECM_Tests.cpp  DEC_Tests.cpp  DEY_Tests.cpp  EOR_Tests.cpp  INC_Tests.cpp  INX_Tests.cpp  JMP_JSR_RTS_Tests.cpp  LDA_Tests.cpp  LDX_Tests.cpp  LDY_Tests.cpp  LD_Tests.cpp  LSR_Tests.cpp  NOP_Tests.cpp  ORA_Tests.cpp  P_Tests.cpp  ROL_Tests.cpp  ROR_Tests.cpp  SBC_Tests.cpp  SE_Tests.cpp  STA_Tests.cpp  (+4 more)
tests/inc/: CPU6502_ASMTestingSuite.h  CPU6502_B_Tests.h  CPU6502_CM_Tests.h  CPU6502_DEC_Tests.h  CPU6502_DE_Tests.h  CPU6502_INC_Tests.h  CPU6502_LD_Tests.h  CPU6502_ST_Tests.h  CPU6502_T_Tests.h  CPU6502_TestingSuite.h  CPU6502_Tests.h
tools/: asm.py  code_gen.py  instructions_6502.py  test_listing.txt
(+144 files in other folders)
